--- a/prime/test_code-blocks.html
+++ b/prime/test_code-blocks.html
@@ -2,12 +2,12 @@
 index: false
 layout: html
 use_pug: true
-title: Test
+title: Test Code Blocks
 description: A theme development project.
 ---
 <!DOCTYPE html>
 <html class="_prime_layout" lang="en-US">
-<!-- path   : prime/test.html -->
+<!-- path   : prime/test_code-blocks.html -->
 <!-- layout : dove/_source/_layouts/prime -->
   <head>
     <meta charset="utf-8"/>
@@ -36,7 +36,7 @@ description: A theme development project.
                 <p><a href="/dove/prime/"><b>Prime</b></a><i class="_icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404.html">404</a>
+                      </svg></i></i><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a>
                 </p>
                 <hr class="thin"/>
               </div>
@@ -44,8 +44,8 @@ description: A theme development project.
             <main class="_main">
               <article class="_article">
                 <div class="_layout">
-                  <h1>Test</h1>{%- capture test %}{%- include test.md %}{%- endcapture %}
-{{ test | markdownify }}
+                  <h1>Test Code Blocks</h1>{%- capture code-blocks %}{%- include test_code-blocks.md %}{%- endcapture %}
+{{ code-blocks | markdownify }}
                 </div>
               </article>
             </main>
@@ -54,7 +54,7 @@ description: A theme development project.
                 <hr class="thin"/>
                 <p class="text-right text-grey"><small>
                     This site is open source.
-                    <a href="https://github.com/techie-joe/dove/edit/main/_source/prime/test.html.pug">Improve this page</a>.</small></p>
+                    <a href="https://github.com/techie-joe/dove/edit/main/_source/prime/test_code-blocks.html.pug">Improve this page</a>.</small></p>
               </div>
             </footer>
           </div>
