--- a/nova/test_code-blocks.html
+++ b/nova/test_code-blocks.html
@@ -38,17 +38,17 @@ description: A theme development project.
                     </svg></i></i><a href="/dove/nova/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/404.html">404</a>
               </div>
               <hr class="thin"/>
+              <nav class="mv"><b>Test</b><i class="_icon"><i class="isvg">
+                    <svg viewBox="0 0 24 24">
+                      <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                    </svg></i></i><a href="/dove/nova/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><b>Code blocks</b>
+              </nav>
+              <hr class="thin"/>
             </div>
           </nav>
           <main class="_main">
             <article class="_article">
-              <div class="_layout">
-                <nav class="mv"><b>Test</b><i class="_icon"><i class="isvg">
-                      <svg viewBox="0 0 24 24">
-                        <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i><a href="/dove/undefined/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/undefined/test_code-blocks.html">Code blocks</a>
-                </nav>
-                <hr class="thin"/>{%- capture code-blocks %}{%- include test_code-blocks.md %}{%- endcapture %}
+              <div class="_layout">{%- capture code-blocks %}{%- include test_code-blocks.md %}{%- endcapture %}
 {{ code-blocks | markdownify }}
               </div>
             </article>
