--- a/mallet/index.html
+++ b/mallet/index.html
@@ -51,7 +51,7 @@ description: Mallet is a Jekyll theme for GitHub Pages.
           <footer class="_footer">
             <div class="_layout">
               <hr class="thin"/>
-              <nav class="_common_nav mv"><b>About</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/templates.html">Templates</a>
+              <nav class="_common_nav mv"><b>About</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/templates.html">Templates</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test.html">Test</a>
               </nav>
               <hr class="thin"/>
               <p class="text-right text-grey"><small>
