--- a/mallet/templates.html
+++ b/mallet/templates.html
@@ -38,7 +38,7 @@ description: Essential collection suitable for any website.
           </header>
           <nav class="_nav">
             <div class="_layout">
-              <nav class="mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Templates</b>
+              <nav class="mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Templates</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test.html">Test</a>
               </nav>
               <hr class="thin"/>
             </div>
@@ -76,7 +76,7 @@ description: Essential collection suitable for any website.
           <footer class="_footer">
             <div class="_layout">
               <hr class="thin"/>
-              <nav class="_common_nav mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Templates</b>
+              <nav class="_common_nav mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Templates</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test.html">Test</a>
               </nav>
               <hr class="thin"/>
               <p class="text-right text-grey"><small>
