--- a/mallet/test.html
+++ b/mallet/test.html
@@ -2,15 +2,15 @@
 index: false
 layout: raw
 use_pug: true
-title: About
-description: About Techie Joe's Mallet.
+title: Basic Mallet Templates
+description: Essential collection suitable for any website.
 ---
 <!DOCTYPE html>
 <html class="_mallet_layout no_js" lang="en-US">
-<!-- path        : mallet/about.html -->
+<!-- path        : mallet/templates.html -->
 <!-- layout      : _source/_layouts/mallet -->
-<!-- title       : About -->
-<!-- description : About Techie Joe's Mallet. -->
+<!-- title       : Basic Mallet Templates -->
+<!-- description : Essential collection suitable for any website. -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
@@ -21,8 +21,8 @@ description: About Techie Joe's Mallet.
     <style>.isvg svg { width:1em;height:1em }</style>
     <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/mallet/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}"/>
     <style>
-      ._article h1 { border:0;font-size:3em;font-weight:bold }
-      ._footer { margin-top:3rem }
+      ._article h1 { border:0 }
+      ._article .subt { padding-bottom:1.3em;margin-top:-0.7em }
     </style>
 {% include layout_head.html %}
 <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
@@ -38,25 +38,50 @@ description: About Techie Joe's Mallet.
           </header>
           <nav class="_nav">
             <div class="_layout">
-              <style>._nav{display:none !important}</style>
+              <nav class="mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Templates</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test.html">Test</a>
+              </nav>
+              <hr class="thin"/>
             </div>
           </nav>
           <main class="_main">
             <article class="_article">
-              <div class="_layout">{%- capture about %}{%- include_relative README.md %}{%- endcapture %}
-{{ about | markdownify }}
+              <div class="_layout">
+                <h1 class="hero">Basic Mallet Templates</h1>
+                <h2 class="subt">⚒️ Essential collection suitable for any website</h2>
+                <p>This collection value <strong>simplicity and versatility</strong> &mdash; Designed for those who is launching a personal blog, a professional portfolio, or a small business landing page. These templates provide the perfect clean slate to bring your vision to life.</p>
+                <div style="margin-bottom:3rem"></div>
+                <nav class="mv"><b>Html</b><i class="_icon"><i class="isvg">
+                      <svg viewBox="0 0 24 24">
+                        <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                      </svg></i></i><a href="/dove/mallet/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/404.html">404</a>
+                </nav>
+                <nav class="mv"><b>Markdown</b><i class="_icon"><i class="isvg">
+                      <svg viewBox="0 0 24 24">
+                        <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                      </svg></i></i><a href="/dove/mallet/md/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/404.html">404</a>
+                </nav>
+                <div style="margin-top:3rem"></div>
+                <div class="box">
+                  <nav><b>Test</b><i class="_icon"><i class="isvg">
+                        <svg viewBox="0 0 24 24">
+                          <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                        </svg></i></i><a href="/dove/mallet/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test_code-blocks.html">Code blocks</a>
+                  </nav>
+                </div>
+                <div style="margin-top:3rem"></div>
+                <p><strong><a href="./preview">Preview the theme</a></strong> to see what it looks like and <strong><a href="./#how-to-use">start using it</a></strong> today!</p>
               </div>
             </article>
           </main>
           <footer class="_footer">
             <div class="_layout">
               <hr class="thin"/>
-              <nav class="_common_nav mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/templates.html">Templates</a>
+              <nav class="_common_nav mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Templates</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test.html">Test</a>
               </nav>
               <hr class="thin"/>
               <p class="text-right text-grey"><small>
                   This site is open source.
-                  <a href="https://github.com/techie-joe/dove/edit/main/_source/mallet/about.html.pug">Improve this page</a>.</small></p>
+                  <a href="https://github.com/techie-joe/dove/edit/main/_source/mallet/templates.html.pug">Improve this page</a>.</small></p>
             </div>
           </footer>
         </div>
