--- a/mallet/home.html
+++ b/mallet/home.html
@@ -21,11 +21,10 @@ description: Home template
     <style>.isvg svg { width:1em;height:1em }</style>
     <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/mallet/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}"/>
     <style>
-      .hero_block { padding:1rem 2rem }
-      .hero_block .hero-title { margin-top:1rem }
-      .hero_block .hero-description { margin-left: 3.3rem; font-size: 1.1em; }
-      .hero_block .hero-hr { margin-top:45px }
-      ._article #icon {
+      #hero_block { padding:1rem 2rem }
+      #hero_block h1 { margin-top:1rem }
+      #hero_block h2 { border:0;font-weight:normal;font-size:1.2em }
+      #hero_block #icon {
         position: absolute;
         font-size:1em;
         opacity:.2;
@@ -61,12 +60,12 @@ description: Home template
           <main class="_main">
             <article class="_article">
               <div class="_layout">
-                <div class="hero_block box no_overflow">
+                <div class="box no_overflow" id="hero_block">
                   <div class="relative">
                     <div id="icon">⚒️</div>
                   </div>
-                  <h1 class="hero-title">⚒️ Site title</h1>
-                  <p class="hero-description">Your site's description.</p>
+                  <h1>⚒️ Site title</h1>
+                  <h2>Site slogan or description</h2>
                 </div>
                 <hr class="thin"/>
                 <p><code>// home content</code></p>
