--- a/prime/post.html
+++ b/prime/post.html
@@ -34,7 +34,7 @@ description: Post template.
           </header>
           <nav class="_nav">
             <div class="_layout">
-              <div class="mv"><b>Html</b><i class="icon"><i class="isvg">
+              <div class="mv"><a href="/dove/prime/samples">Samples</a><i class="icon"><i class="itext">:</i></i><b>Html</b><i class="icon"><i class="isvg">
                     <svg viewBox="0 0 24 24">
                       <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                     </svg></i></i><a href="/dove/prime/home">Home</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page">Page</a><i class="icon"><i class="itext">&bull;</i></i><b>Post</b><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404">404</a>
