--- a/prime/preview.html
+++ b/prime/preview.html
@@ -34,11 +34,8 @@ description: Theme preview.
           </header>
           <nav class="_nav">
             <div class="_layout">
-              <div class="mv"><b>Html</b><i class="icon"><i class="isvg">
-                    <svg viewBox="0 0 24 24">
-                      <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                    </svg></i></i><a href="/dove/prime/home">Home</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page">Page</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/post">Post</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404">404</a>
-              </div>
+              <nav class="mv"><a href="/dove/prime/">About</a><i class="icon"><i class="itext">&bull;</i></i><b>Preview</b><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/samples">Samples</a>
+              </nav>
               <hr class="thin"/>
             </div>
           </nav>
@@ -51,6 +48,9 @@ description: Theme preview.
           </main>
           <footer class="_footer">
             <div class="_layout">
+              <hr class="thin"/>
+              <nav class="_common_nav mv"><a href="/dove/prime/">About</a><i class="icon"><i class="itext">&bull;</i></i><b>Preview</b><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/samples">Samples</a>
+              </nav>
               <hr class="thin"/>
               <p class="text-right text-grey"><small>
                   This site is open source.
