--- a/prime/test_colors.html
+++ b/prime/test_colors.html
@@ -2,15 +2,15 @@
 index: false
 layout: raw
 use_pug: true
-title: Test Colors
-description: A theme development project.
+title: Colors
+description: Color samples.
 ---
 <!DOCTYPE html>
 <html class="_prime_layout no_js" lang="en-US">
 <!-- path        : prime/test_colors.html -->
 <!-- layout      : _source/_layouts/prime -->
-<!-- title       : Test Colors -->
-<!-- description : A theme development project. -->
+<!-- title       : Colors -->
+<!-- description : Color samples. -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
@@ -34,11 +34,8 @@ description: A theme development project.
           </header>
           <nav class="_nav">
             <div class="_layout">
-              <div class="mv"><b>Html</b><i class="icon"><i class="isvg">
-                    <svg viewBox="0 0 24 24">
-                      <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                    </svg></i></i><a href="/dove/prime/home">Home</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page">Page</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/post">Post</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404">404</a>
-              </div>
+              <nav class="mv"><a href="/dove/prime/">About</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/preview">Preview</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/samples">Samples</a>
+              </nav>
               <hr class="thin"/>
               <nav class="mv"><b>Colors</b><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/test_code-blocks">Code blocks</a>
               </nav>
@@ -54,6 +51,12 @@ description: A theme development project.
           </main>
           <footer class="_footer">
             <div class="_layout">
+              <hr class="thin"/>
+              <nav class="_common_nav mv"><b>Colors</b><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/test_code-blocks">Code blocks</a>
+              </nav>
+              <hr class="thin"/>
+              <nav class="_common_nav mv"><a href="/dove/prime/">About</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/preview">Preview</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/samples">Samples</a>
+              </nav>
               <hr class="thin"/>
               <p class="text-right text-grey"><small>
                   This site is open source.
